# loggy-c

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
src/: loggy.c  loggy.h
test/: loggy_test.c
